--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -64,11 +64,18 @@
 .product{
     height: 250px;
     width: 20%;
-    min-width: 250px;
+    /* min-width: 250px; */
+    box-shadow: inset 1px 2px 4px rgba(0, 0, 0, 0.01), 0px 0px 7px rgba(0, 0, 0, 0.2); 
+    margin-bottom: 15px;
+    border-radius: 5px;
+    padding: 20px;
+    position: relative;
 }
 
 .products{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+   
+    /* gap: 10; */
 }
